--- a/src/clubs.html
+++ b/src/clubs.html
@@ -40,22 +40,22 @@
             <div class="social toolbar__helper">
                 <div class="social__item">
                     <a href="https://vk.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/vk.png" alt="VK"/>
+                        <img class="social__image" src="img/vk.png" alt="VK"/>
                     </a>
                 </div>
                 <div class="social__item">
                     <a href="https://facebook.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/fb.png" alt="FB"/>
+                        <img class="social__image" src="img/fb.png" alt="FB"/>
                     </a>
                 </div>
                 <div class="social__item">
                     <a href="https://instagram.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/ig.png" alt="Instagram"/>
+                        <img class="social__image" src="img/ig.png" alt="Instagram"/>
                     </a>
                 </div>
                 <div class="social__item">
                     <a href="https://youtube.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/yt.png" alt="youtube"/>
+                        <img class="social__image" src="img/yt.png" alt="youtube"/>
                     </a>
                 </div>
             </div>
@@ -109,6 +109,54 @@
                 <div class="pageTitle__title">
                     <h1 class="titleText">Клубы</h1>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="map" id="map">
+        <div class="map__list mapList">
+            <div class="mapList__titleBlock">
+                <div class="mapList__title">Карта клубов</div>
+                <div class="mapList__selectBlock">
+                    <select class="mapList__select" name="map_country">
+                        <option class="option mapList__option">Россия</option>
+                        <option class="option mapList__option">Франция</option>
+                    </select>
+                    <select class="mapList__select" name="map_city">
+                        <option class="option mapList__option">Москва</option>
+                        <option class="option mapList__option">Новосибирск</option>
+                    </select>
+                </div>
+            </div>
+            <div class="mapList__listBlock mapClubs">
+                <ul class="mapClubs__container">
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">Название клуба</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule">Ежедневно 10:00—22:00</div>
+                        <div class="linkBlock mapClub__btnBlock">
+<a href="club.html" class="linkBlock__item linkBlock__item--red">Подробнее о клубе</a>
+                        </div>
+                    </li>
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">Название клуба</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule"> Пн—Пт 7:00—23:00<br>Сб—Вс 8:00—22:00</div>
+                    </li>
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">«Москва»</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule"> Пн—Пт 7:00—23:00<br>Сб—Вс 8:00—22:00</div>
+                    </li>
+                    <li class="mapClubs__item mapClub">
+                        <div class="mapClub__title">«Москва»</div>
+                        <div class="mapClub__address">Шарикоподшипниковская 13 стр. 46</div>
+                        <div class="mapClub__metro">Волгоградский проспект</div>
+                        <div class="mapClub__schedule"> Пн—Пт 7:00—23:00<br>Сб—Вс 8:00—22:00</div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
@@ -174,22 +222,22 @@
                     <div class="social toolbar__helper">
                         <div class="social__item">
                             <a href="https://vk.com" target="_blank" class="social__link">
-                                <img class="social__image" src="./img/socials/vk.png" alt="VK"/>
+                                <img class="social__image" src="img/vk.png" alt="VK"/>
                             </a>
                         </div>
                         <div class="social__item">
                             <a href="https://facebook.com" target="_blank" class="social__link">
-                                <img class="social__image" src="./img/socials/fb.png" alt="FB"/>
+                                <img class="social__image" src="img/fb.png" alt="FB"/>
                             </a>
                         </div>
                         <div class="social__item">
                             <a href="https://instagram.com" target="_blank" class="social__link">
-                                <img class="social__image" src="./img/socials/ig.png" alt="Instagram"/>
+                                <img class="social__image" src="img/ig.png" alt="Instagram"/>
                             </a>
                         </div>
                         <div class="social__item">
                             <a href="https://youtube.com" target="_blank" class="social__link">
-                                <img class="social__image" src="./img/socials/yt.png" alt="youtube"/>
+                                <img class="social__image" src="img/yt.png" alt="youtube"/>
                             </a>
                         </div>
                     </div>
@@ -200,25 +248,25 @@
             <div class="wrapper">
                 <ul class="footerCounter__container counter">
                     <li class="footerCounter__item">
-                        <img src="./img/footer/globe.png" alt="" class="footerCounter__image">
+                        <img src="img/globe.png" alt="" class="footerCounter__image">
                         <div class="footerCounter__textBlock counter__item">
                             <span class="counter__itemDigit">8</span>&nbsp;стран
                         </div>
                     </li>
                     <li class="footerCounter__item">
-                        <img src="./img/footer/ball.png" alt="" class="footerCounter__image">
+                        <img src="img/ball.png" alt="" class="footerCounter__image">
                         <div class="footerCounter__textBlock counter__item">
                             <span class="counter__itemDigit">12</span>&nbsp;клубов
                         </div>
                     </li>
                     <li class="footerCounter__item">
-                        <img src="./img/footer/person.png" alt="" class="footerCounter__image">
+                        <img src="img/person.png" alt="" class="footerCounter__image">
                         <div class="footerCounter__textBlock counter__item">
                             <span class="counter__itemDigit">12 230</span>&nbsp;игроков
                         </div>
                     </li>
                     <li class="footerCounter__item">
-                        <img src="./img/footer/speaker.png" alt="" class="footerCounter__image">
+                        <img src="img/speaker.png" alt="" class="footerCounter__image">
                         <div class="footerCounter__textBlock counter__item">
                             <span class="counter__itemDigit">123</span>&nbsp;амбассадора
                         </div>
@@ -350,7 +398,7 @@
         </div>
         <div class="modalForm__right">
             <div class="modalForm__right__subTitle">
-                <img src="./img/socials/ig.png"> @squash4friends
+                <img src="img/ig.png"> @squash4friends
             </div>
             <div class="modalForm__rightText">
                 <h2>Всё самое интересное — в Instagram</h2>
