--- a/src/index.html
+++ b/src/index.html
@@ -190,22 +190,6 @@
                     </div>
                     <div class="slide__footer slideFooter">
                         <button class="slideFooter__more">Подробнее</button>
-                        <!--                    <div class="slideFooter__pagination slidePagination  paginationBlock">-->
-                        <!--                        <ul class="paginationBlock__container">-->
-                        <!--                            <li-->
-                        <!--                                    class="paginationBlock__item paginationBlock__item&#45;&#45;arrow  paginationBlock__itemArrow&#45;&#45;left">-->
-                        <!--                                &#11104;-->
-                        <!--                            </li>-->
-                        <!--                            <li class="paginationBlock__item  paginationBlock__item&#45;&#45;active">1</li>-->
-                        <!--                            <li class="paginationBlock__item">2</li>-->
-                        <!--                            <li class="paginationBlock__item">3</li>-->
-                        <!--                            <li class="paginationBlock__item">4</li>-->
-                        <!--                            <li-->
-                        <!--                                    class=" paginationBlock__item  paginationBlock__itemArrow  paginationBlock__itemArrow&#45;&#45;right">-->
-                        <!--                                &#10141;-->
-                        <!--                            </li>-->
-                        <!--                        </ul>-->
-                        <!--                    </div>-->
                     </div>
                     <div class="slide__person">
                         <img class="slide__personImage" src="img/slider_person.png" alt="">
@@ -640,7 +624,7 @@
                             </div>
                         </div>
                         <div class="orderBlock__img">
-                            <img class="orderBlock__picture" src="img/women.png" alt="">
+                            <img class="orderBlock__picture" src="img/man.png" alt="">
                         </div>
                     </div>
                     <div class="orderBlock__CTA orderCTA">
